fix: snippets getting out of the screen

--- a/packages/next/src/styles/globals.css
+++ b/packages/next/src/styles/globals.css
@@ -69,6 +69,7 @@
 
 pre {
 	background: transparent !important;
+	white-space : pre-wrap !important;
 }
 
 code {
